@@ -1,0 +1,1 @@
+The test is simple, and allocates the program's max 16 pages first.  Then we attempt to allocate two more pages, in order to see how the modifications handle the two expected page faults.  Then we attempt to reference the first 5 pages, some of which have been swapped out (depending on which page replacement algorithm we used).  Then we fork to test our modifications to fork, and the child makes a change to the sixth page.  The parent wiats and finally deallocates all the pages before it exits.  
